# Pyscman

./: .gitignore  Cargo.toml  Dockerfile  README.md  tasks.json
.github/workflows/: publish.yml
src/: index.html  main.rs
