[package]
name = "Pyscman"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
threadpool = "1.8.1"
num_cpus = "1.17.0"