[package]
name = "Pyscman"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
actix-cors = "0.7.1"
actix-ws = "0.3.0"
actix = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
threadpool = "1.8.1"
log = "0.4.27"
env_logger = "0.11.8"
actix-multipart = "0.7.2"
sanitize-filename = "0.6.0"
